# ct-cloud

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  test_identity.rs
.claude/: settings.json
.github/workflows/: docker-build.yml  publish-docker.yml
backend/: Cargo.toml  Dockerfile
backend/src/: ddl_events.rs  main.rs  schema.rs  state.rs  sync.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/config/: route.ts
frontend/src/app/api/tables/: route.ts
frontend/src/app/api/tables/[id]/: route.ts
frontend/src/lib/: redis.ts
init/: entrypoint.sh  init.sql  init_replica.sql
mssql-sync-app/: Cargo.toml  Dockerfile  test_insert.rs
mssql-sync-app/src/: main.rs  schema.rs  state.rs  sync.rs
seed/: Cargo.toml
seed/src/: main.rs
