[package]
name = "mssql-sync-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mssql", "macros", "decimal"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
uuid = { version = "=1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] } # Pinning to avoid MSRV issues

